RESOLVED FIXED289722
REGRESSION(287842@main): Broke out-of-flow box positioning inside relative inline box
https://bugs.webkit.org/show_bug.cgi?id=289722
Summary REGRESSION(287842@main): Broke out-of-flow box positioning inside relative in...
alan
Reported 2025-03-13 11:35:25 PDT
Attachments
Patch (41.91 KB, patch)
2025-03-13 11:37 PDT, alan
no flags
Patch (41.93 KB, patch)
2025-03-13 11:39 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2025-03-13 11:37:19 PDT
alan
Comment 2 2025-03-13 11:39:57 PDT
alan
Comment 3 2025-03-13 11:41:18 PDT
I probably have to revert 287919@main as well. Let's see.
Ahmad Saleem
Comment 4 2025-03-13 15:34:06 PDT
EWS
Comment 5 2025-03-13 21:24:24 PDT
Committed 292138@main (c5fb35e20258): <https://commits.webkit.org/292138@main> Reviewed commits have been landed. Closing PR #42437 and removing active labels.
EWS
Comment 6 2025-03-17 07:04:58 PDT
Committed 289651.282@safari-7621-branch (8da8dfd07ae0): <https://commits.webkit.org/289651.282@safari-7621-branch> Reviewed commits have been landed. Closing PR #2806 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.