REGRESSION(287842@main, 288511@main, 287919@main): Broke out-of-flow box positioning inside relative inline box

https://bugs.webkit.org/show_bug.cgi?id=289722
rdar://146469641

Unreviewed revert.

Revert `unicode-bidi` implementation.

* LayoutTests/fast/css/default-bidi-css-rules-expected.txt:
* LayoutTests/fast/css/default-bidi-css-rules.html:
* LayoutTests/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/bidi-rendering/unicode-bidi-ua-rules-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/flow-content-0/search-styles-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/flow-content-0/search-styles-iso-8859-8-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-expected.txt:
* LayoutTests/inspector/css/shadow-scoped-style-expected.txt:
* LayoutTests/fast/css/all-keyword-direction-expected.html:
* Source/WebCore/css/html.css:
(hr, bdi, output):
(address, blockquote, center, div, figure, figcaption, footer, form, header, hr,): Deleted.
(textarea[dir=auto i], pre[dir=auto i]): Deleted.
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::unicodeBidiAttributeForDirAuto):
(WebCore::HTMLElement::collectPresentationalHintsForAttribute):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/AttrStyle.mm:
(TEST(WebKit, AttrStyle)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEditActions.mm:
(TestWebKitAPI::TEST(WKWebViewEditActions, ModifyTextWritingDirection)):

Canonical link: https://commits.webkit.org/292138@main